--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Template VueJS</title>
+    <title>Avada Food</title>
   </head>
   <body>
     <div id="app"></div>
